--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   .header {
     text-align: center;
   }
-  
+
 }
 
 .main {
@@ -39,7 +39,7 @@ body {
 .label_task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .row-wrapper {
@@ -146,7 +146,7 @@ li>label {
 }
 
 li>input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 button.button_delete img {
@@ -163,19 +163,19 @@ button.button_delete img:hover {
 /* Completed */
 
 ul.list_completed label {
-  text-decoration: line-through color: #888;
+  text-decoration: line-through; color: #888;
 }
 
 
 /* Edit Task */
 
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.list__item_on-edit input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.list__item_on-edit label {
