--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Basic Style */
 
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -13,11 +13,11 @@ body {
   text-align: right;
 }
 
-.header img {
+.header__img {
   width: 100%;
 }
 
-.header .link {
+.link {
   font-family: fantasy, cursive;
 }
 
@@ -35,7 +35,7 @@ body {
   margin: 0 auto 0;
 }
 
-.input_task,
+.input_text,
 .label_task {
   width: 56%;
   display: inline-block;
@@ -46,22 +46,20 @@ body {
   display: flex;
 }
 
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.list__item, .title {
   list-style: none;
 }
 
-input,
-button {
+.input, .button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -71,15 +69,15 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 
 
 /* Heading */
 
-h3,
-label[for="new-task"] {
+.title,
+.label_section1 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -89,7 +87,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input_text{
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -102,26 +100,26 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input_text:focus {
   color: #333;
 }
 
 
 /* New Task */
 
-label[for="new-task"] {
+.label_section1 {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.input_section1 {
   width: 318px;
 }
 
 
 /* Task list */
 
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -130,54 +128,55 @@ li {
   align-items: center;
 }
 
-li>* {
+.list__item>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.input_checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.label_task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.item__input {
   width: 226px;
 }
 
-button.button_delete img {
+.button__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.button_delete img:hover {
+.button__img:hover {
   transform: rotateZ(0);
 }
 
 
 /* Completed */
 
-ul.list_completed label {
-  text-decoration: line-through; color: #888;
+.label_completed {
+  text-decoration: line-through;
+  color: #888;
 }
 
 
 /* Edit Task */
 
-ul li input[type=text] {
+.item__input.input_text{
   display: none;
 }
 
-ul li.list__item_on-edit input[type=text] {
+.input_text.input_text_on-edit {
   display: inline-block;
   width: 224px;
 }
 
-ul li.list__item_on-edit label {
+.label_on-edit {
   display: none;
 }
