--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
 
 /* Task list */
 
-.list__item__content {
+.list__content {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
